qslog-back/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qslog-back
  labels:
    app: qslog-back
spec:
  selector:
    matchLabels:
      app: qslog-back
  replicas: 1
  template:
    metadata:
      labels:
        app: qslog-back
    spec:
      containers:
      - name: qslog-back
        image: danilodumba/qslog-back:1.5.1
        ports:
        - containerPort:  80
