qslog-back/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qslog-back
spec:
  selector:
    app: qslog-back
  ports:
  - name: qslog-back
    protocol: TCP
    port: 5004
    targetPort: 80
