qslog-back/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qslog-back
spec:
  rules:
    - host: apilog.qsse.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qslog-back
                port:
                  number: 80
